; ModuleID = '/home/carl/AnghaBench/openssl/crypto/evp/extr_evp_fetch.c_construct_evp_method.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/evp/extr_evp_fetch.c_construct_evp_method.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.evp_method_data_st = type { i8* (i32, i32*, i32*)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i32*, i32*, i8*)* @construct_evp_method to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @construct_evp_method(i8* %0, i32* %1, i32* %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca %struct.evp_method_data_st*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  store i8* %0, i8** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i8* %3, i8** %9, align 8
  %14 = load i8*, i8** %9, align 8
  %15 = bitcast i8* %14 to %struct.evp_method_data_st*
  store %struct.evp_method_data_st* %15, %struct.evp_method_data_st** %10, align 8
  %16 = load i32*, i32** %8, align 8
  %17 = call i32* @ossl_provider_library_context(i32* %16)
  store i32* %17, i32** %11, align 8
  %18 = load i32*, i32** %11, align 8
  %19 = call i32* @ossl_namemap_stored(i32* %18)
  store i32* %19, i32** %12, align 8
  %20 = load i32*, i32** %12, align 8
  %21 = load i8*, i8** %6, align 8
  %22 = call i32 @add_names_to_namemap(i32* %20, i8* %21)
  store i32 %22, i32* %13, align 4
  %23 = load i32, i32* %13, align 4
  %24 = icmp eq i32 %23, 0
  br i1 %24, label %25, label %26

25:                                               ; preds = %4
  store i8* null, i8** %5, align 8
  br label %34

26:                                               ; preds = %4
  %27 = load %struct.evp_method_data_st*, %struct.evp_method_data_st** %10, align 8
  %28 = getelementptr inbounds %struct.evp_method_data_st, %struct.evp_method_data_st* %27, i32 0, i32 0
  %29 = load i8* (i32, i32*, i32*)*, i8* (i32, i32*, i32*)** %28, align 8
  %30 = load i32, i32* %13, align 4
  %31 = load i32*, i32** %7, align 8
  %32 = load i32*, i32** %8, align 8
  %33 = call i8* %29(i32 %30, i32* %31, i32* %32)
  store i8* %33, i8** %5, align 8
  br label %34

34:                                               ; preds = %26, %25
  %35 = load i8*, i8** %5, align 8
  ret i8* %35
}

declare dso_local i32* @ossl_provider_library_context(i32*) #1

declare dso_local i32* @ossl_namemap_stored(i32*) #1

declare dso_local i32 @add_names_to_namemap(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
